overlap issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -287,6 +287,7 @@ and (min-width : 1224px) {
       position: fixed;
       right:10px;
       bottom:0px;
+       z-index: -1;
   }
 }
 
